k8s/manifests-26c145/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-26c145
  namespace: journee
  labels:
    app: journee-26c145
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-26c145
  template:
    metadata:
      labels:
        app: journee-26c145
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-26c145
          image: gcr.io/my-docker-471807/journee:26c145-c804da
          ports:
            - containerPort: 3000
