k8s/manifests-26c145/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-26c145
  namespace: journee
spec:
  selector:
    app: journee-26c145
  ports:
    - port: 80
      targetPort: 3000
